--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,9 +4,7 @@
 
   <%= simple_form_for [ @cocktail] do |f| %>
     <%= f.input :name %>
-
-
-
+    <%= f.input :photo, as: :file %>
 
     <%= f.submit "Create cocktail", class: "btn btn-primary" %>
   <% end %>
@@ -14,3 +12,6 @@
   <%= link_to 'Back', cocktails_path %>
 
 </div>
+
+
+<%= console %>
