--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,16 +1,22 @@
-<div class="container">
+<div class="container-cards">
   <div class="cards-cocktails">
 
     <% @cocktails.each do |cocktail| %>
-      <div class="card-trip shadow taille-card d-flex flex-column">
-        <div class="image" style="background-image: url('<%= cl_image_path cocktail.photo.key, width: 250, height: 400, crop: :mfit %>')" ></div>
 
-        <div class="card-trip-infos taille-card-texte">
-          <div class="d-flex justify-content-center">
-            <h3 class="text-center"><%= cocktail.name %></h3>
-            <%= link_to "Delete", cocktail_path(cocktail),
-                        :confirm => "Are you sure?",
-                        method: :delete %>
+      <div class="container-hover">
+
+        <div class="d-flex flex-column">
+          <h4 class="description"></h4>
+          <div class="card-trip shadow taille-card photo">
+            <div class="image" style="background-image: url('<%= cl_image_path cocktail.photo.key, width: 250, height: 400, crop: :mfit %>')" ></div>
+              <div class="card-trip-infos taille-card-texte">
+                <div class="d-flex justify-content-center">
+                  <h3 class="text-center"><%= cocktail.name %></h3>
+                  <%= link_to "",cocktail_path(cocktail),
+                              :confirm => "Are you sure?",
+                              method: :delete, class: "fas fa-trash hover-description"%>
+                </div>
+              </div>
           </div>
         </div>
       </div>
