--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -14,7 +14,7 @@
                   <h3 class="text-center"><%= cocktail.name %></h3>
                   <%= link_to "",cocktail_path(cocktail),
                               :confirm => "Are you sure?",
-                              method: :delete, class: "fas fa-trash hover-description"%>
+                              method: :delete, class: "fas fa-trash poubelle"%>
                 </div>
               </div>
           </div>
